Frontend. Login - overflowfix, roomList - fix droptable, fix room displays

--- a/html/login.css
+++ b/html/login.css
@@ -2,7 +2,9 @@ body { font-family: Arial, sans-serif; background-color: #303641;
 	background-image: 
 		linear-gradient(135deg, rgba(0,0,0, 0.2) 0%, rgba(0,0,0, 0.1) 25%, rgba(0,0,0, 0.2) 50%, rgba(0,0,0, 0.1) 75%, rgba(0,0,0, 0.2) 100%), 
 		linear-gradient(90deg, #192129, #303641, #484e57);
-	background-size: 8px 8px, 100%;}
+	background-size: 8px 8px, 100%;
+  overflow: hidden;
+}
 form {
   
 }
